external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_macro_identifier_usage.move
module a::m {
    fun $foo() { let $x = 0; }
    public struct $X()
    const $C: u64 = 0;
}
